--- a/css/index.css
+++ b/css/index.css
@@ -59,10 +59,11 @@ main div {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  width: 700px;
+  max-width: 700px;
   background-color: var(--white);
   color: var(--purplebrown);
   padding: 30px;
+  margin: 30px;
   border: 2px var(--purplebrown) solid;
 }
 
