--- a/css/terapiformer.css
+++ b/css/terapiformer.css
@@ -98,6 +98,7 @@ h2,
   align-items: center;
   margin-top: 40px;
   margin-bottom: 40px;
+  padding: 20px;
 }
 .kognitive_img h3 {
   text-align: center;
